2003-08-20  Simon Josefsson  <jas@extundo.com>

	* gnus.el (gnus-read-group): Added check to ask confirmation if
	Group name contains invalid character. You can use '/' in IMAP,
	but not in filenames. G m cannot know what the user is creating,
	so let user decide. See thread m2oeysiev3.fsf@naima.lensflare.org.
	Tiny patch from letters@hotpop.com (Jari Aalto+mail.linux).

2003-08-13  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-score.el (gnus-summary-score-effect): Fix interactive use.

2003-08-10  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-draft.el (gnus-draft-send-all-messages): ask if all drafts
	should be sent unless gnus-expert-user is on

2003-08-09  Jesper Harder  <harder@ifa.au.dk>

	* pgg-gpg.el (pgg-gpg-extra-args): Fix customization type.

2003-08-07  Jesper Harder  <harder@ifa.au.dk>

	* pgg-gpg.el (pgg-gpg-process-region): Bind
	default-enable-multibyte-characters to nil.

2003-08-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* canlock.el (canlock-password): Fix customization type.
	(canlock-password-for-verify): Ditto.
	* deuglify.el (gnus-outlook-deuglify-unwrap-min): Ditto.
	(gnus-outlook-deuglify-unwrap-max): Ditto.
	(gnus-outlook-deuglify-unwrap-stop-chars): Ditto.
	* gnus-sum.el (gnus-sum-thread-tree-root): Ditto.
	(gnus-sum-thread-tree-false-root): Ditto.
	(gnus-sum-thread-tree-single-indent): Ditto.
	* message.el (message-archive-note): Ditto.
	(message-subscribed-address-file): Ditto.
	(message-user-fqdn): Ditto.
	* spam-report.el (spam-report-gmane-regex): Ditto.
	* spam.el (spam-blackhole-good-server-regex): Ditto.

	* gnus-start.el (gnus-save-killed-list): Fix last change.
	* message.el (message-courtesy-message): Ditto.

2003-08-07  Jesper Harder  <harder@ifa.au.dk>

	* gnus-art.el (gnus-header-face-alist): Revert previous change.
	(gnus-header-newsgroups-face): Explain that it's only used for
	crossposts.

2003-08-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-registry.el (gnus-registry-max-entries): Fix customization
	type.