@@ -1,3 +1,8 @@
+2003-08-20  Jesper Harder  <harder@ifa.au.dk>
+
+	* gnus-art.el (gnus-article-edit-done, gnus-article-edit-exit):
+	Redisplay article after editing.
+
 2003-08-20  Simon Josefsson  <jas@extundo.com>
 
 	* gnus.el (gnus-read-group): Added check to ask confirmation if
